--- a/settings/external/com.kms.katalon.keyword.Applitools-Keywords.properties
+++ b/settings/external/com.kms.katalon.keyword.Applitools-Keywords.properties
@@ -1,5 +1,5 @@
-#Tue Aug 04 16:42:02 IST 2020
-Visual\ Grid\ View\ Port="8889"
+#Mon Aug 10 16:15:50 IST 2020
+Visual\ Grid\ View\ Port="[[1200,625],[1920,1080]]"
 API\ Key="PoP1mLFP8i2mK57zGxSFhHLa5OnjdF02Fbi10253skWZ0110"
 Application\ Name="Katalon Studio"
 Match\ Level="STRICT"
